tests/gen-test/test_out/match-parse-out.txt
error: expected '{' | '=>' but got Int
 --> match\root.ctl:1:137
  |
1 | struct Matched { a : uint ; b : uint } ; #[entry] ; fn main() -> uint => match Matched \ { a : 0 ; b : 1 } {     \ { a : 1 ; b : 0 } => 1 ; \ { a : 0 ; b : 1 } => 0 ; \ { a ; b : 0 }     => a ; \ { a ; b } => a + b ; } ;
  |                                                                                                                                         ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

error: expected '{' | '=>' but got Int
 --> match\root.ctl:1:164
  |
1 | struct Matched { a : uint ; b : uint } ; #[entry] ; fn main() -> uint => match Matched \ { a : 0 ; b : 1 } {     \ { a : 1 ; b : 0 } => 1 ; \ { a : 0 ; b : 1 } => 0 ; \ { a ; b : 0 }     => a ; \ { a ; b } => a + b ; } ;
  |                                                                                                                                                                    ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

error: expected '{' | '=>' but got Ident
 --> match\root.ctl:1:191
  |
1 | struct Matched { a : uint ; b : uint } ; #[entry] ; fn main() -> uint => match Matched \ { a : 0 ; b : 1 } {     \ { a : 1 ; b : 0 } => 1 ; \ { a : 0 ; b : 1 } => 0 ; \ { a ; b : 0 }     => a ; \ { a ; b } => a + b ; } ;
  |                                                                                                                                                                                               ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

error: expected '{' | '=>' but got Ident
 --> match\root.ctl:1:210
  |
1 | struct Matched { a : uint ; b : uint } ; #[entry] ; fn main() -> uint => match Matched \ { a : 0 ; b : 1 } {     \ { a : 1 ; b : 0 } => 1 ; \ { a : 0 ; b : 1 } => 0 ; \ { a ; b : 0 }     => a ; \ { a ; b } => a + b ; } ;
  |                                                                                                                                                                                                                  ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

